<resources>
    <string name="app_name">Movie</string>

    <string name="shared_element_container">shared_element_container</string>
    <string name="shared_element_container_with_id">shared_element_container_$1%s</string>

    <string name="internet_connection_error_text">Internet connection error</string>
    <string name="parsing_error_text">Json parsing error</string>
    <string name="unexpected_error_text">Unexpected error happened</string>

    <string name="age_limit">%1$d+</string>
    <string name="avengers_end_game">Avengers:\nEnd Game</string>
    <string name="action_adventure_fantasy">Action, Adventure, Fantasy</string>
    <string name="reviews">%1$d reviews</string>
    <string name="storyline">Storyline</string>
    <string name="text_description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="robert_downey_jr">Robert\nDowney Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="button_back">Back</string>
    <string name="header_movies_list">Movies list</string>
    <string name="movie_time">%1$d min</string>
    <string name="avengers_end_game_movie_item">Avengers: End Game</string>

    <string name="actors_not_laded_message">Actors list not loaded</string>

    <string name="retry">Retry</string>

    <string name="chanel_new_top_rated_movie">New top rated movie</string>
    <string name="chanel_new_top_rated_movie_description">New top rated movie appears</string>

    <string name="new_top_rated_movie_with_rating">New top rated movie appears with raring %1$s</string>
    <string name="rating_text">Rating: %1$s</string>

    <string name="button_schedule_watch">Add to calendar</string>
    <string name="button_trailer_watch">Watch a trailer</string>
    <string name="permission_not_granted_text">Calendar permission not granted</string>
    <string name="permission_dialog_explanation_text">To continue please grant access to calendar</string>
    <string name="permission_dialog_denied_text">This feature is not available without calendar permissions. Open app settings?</string>
    <string name="dialog_positive_button">OK</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="calendar_event_title">To see a movie \"%1$s\"</string>
    <string name="no_video_found_message">No video found</string>
</resources>